Adding README and deleting unused files

--- a/scripts/mongodb/requirements.txt
+++ b/scripts/mongodb/requirements.txt
@@ -1,10 +1,2 @@
-Requirements:
-- python3 
-- venv
-
-# Create the virtual environment named "xgain"
-python3 -m venv venv-xgain
-
-# Activate the virtual environment
-source venv-xgain/bin/activate
-
+dnspython==2.4.2
+pymongo==4.5.0
