Fix processing_time KPI.  Some documents don't get inserted.

--- a/scripts/processing_time/config.cfg
+++ b/scripts/processing_time/config.cfg
@@ -1,17 +1,20 @@
 [general]
+results_file = ../../results/processing_time.txt
+duration = 5  		 
+repetitions = 5
 mongodb_port = 27017
-results_folder = ../../results
-repetitions = 100
+db_file = sample_agriculture_data.json
+database_name = test-db
+collection_name = test-farms
 
-[far-edge]
+[extreme-edge]
 raspberry-pi-1_ip = 192.168.123.38
 # raspberry-pi-2_ip = 192.168.1.102
 # raspberry-pi-3_ip = 192.168.1.103
 # raspberry-pi-4_ip = 192.168.1.104
 
-[edge]
-# nuc-1_ip = 192.168.1.201
+[near-edge]
+# nuc-1_ip = 192.168.123.38
 # nuc-2_ip = 192.168.1.202
 # nuc-3_ip = 192.168.1.203
 # nuc-4_ip = 192.168.1.204
-
