--- a/scripts/network_throughput/config.cfg
+++ b/scripts/network_throughput/config.cfg
@@ -1,7 +1,7 @@
 [general]
 results_file = ../../results/network_througput.txt
-duration = 5  		 
-repetitions = 5
+duration = 5
+repetitions = 2
 
 [extreme-edge]
 raspberry-pi-1_ip = 192.168.123.38
@@ -10,7 +10,10 @@ raspberry-pi-1_ip = 192.168.123.38
 # raspberry-pi-4_ip = 192.168.1.104
 
 [near-edge]
-nuc-1_ip = 192.168.123.38
+# nuc-1_ip = 192.168.123.38
 # nuc-2_ip = 192.168.1.202
 # nuc-3_ip = 192.168.1.203
 # nuc-4_ip = 192.168.1.204
+
+# benchmarking_server
+# sna-nuc-9 = 192.168.40.97
