--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
-Requirements:
-- python3 
-- venv
-
-# Create the virtual environment named "xgain"
-python3 -m venv venv-xgain
-
-# Activate the virtual environment
-source venv-xgain/bin/activate
+contourpy==1.1.1
+cycler==0.12.0
+dnspython==2.4.2
+fonttools==4.43.0
+importlib-resources==6.1.0
+kiwisolver==1.4.5
+matplotlib==3.7.3
+numpy==1.24.4
+packaging==23.2
+Pillow==10.0.1
+pymongo==4.5.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
+six==1.16.0
+zipp==3.17.0
