Fix resource_utilization list index out of range error

--- a/scripts/resource_utilization/config.cfg
+++ b/scripts/resource_utilization/config.cfg
@@ -1,7 +1,7 @@
 [general]
 results_file = ../../results/resource_utilization.txt
-duration = 5	 
-repetitions = 3
+duration = 30	 
+repetitions = 1
 
 [resource-utilization]
 vmstat_interval = 1
@@ -15,3 +15,8 @@ stress_vm_bytes = 50M
 # stress_io: The number of I/O workers spinning on sync().
 # stress_vm: Number of VM workers spinning on malloc()/free().
 # stress_vm_bytes: Memory allocated per each VM worker.
+
+# With this config you're stressing:
+# 2 CPU cores.
+# 1 IO process.
+# 1 VM (Virtual Memory) process using 50MB of memory.
