Fix config file examples.

--- a/scripts/processing_time/config.cfg
+++ b/scripts/processing_time/config.cfg
@@ -8,13 +8,13 @@ database_name = test-db
 collection_name = test-farms
 
 [extreme-edge]
-raspberry-pi-1_ip = 192.168.123.38
-# raspberry-pi-2_ip = 192.168.1.102
-# raspberry-pi-3_ip = 192.168.1.103
-# raspberry-pi-4_ip = 192.168.1.104
+# extreme-edge-1_ip = 192.168.123.38
+# extreme-edge-2_ip = 192.168.1.102
+# extreme-edge-3_ip = 192.168.1.103
+# extreme-edge-4_ip = 192.168.1.104
 
 [near-edge]
-# nuc-1_ip = 192.168.123.38
-# nuc-2_ip = 192.168.1.202
-# nuc-3_ip = 192.168.1.203
-# nuc-4_ip = 192.168.1.204
+# near-edge-1_ip = 192.168.123.38
+# near-edge-2_ip = 192.168.1.202
+# near-edge-3_ip = 192.168.1.203
+# near-edge-4_ip = 192.168.1.204
