Update all config files increasing flexibility of name and number of layers

--- a/scripts/service_availability/config.cfg
+++ b/scripts/service_availability/config.cfg
@@ -2,15 +2,32 @@
 results_file = ../../results/service_availability.txt
 duration = 5  		 
 repetitions = 5
+layers = extreme-edge, far-edge, near-edge, cloud
 
 [extreme-edge]
-# extreme-edge-1_ip = 192.168.123.38
-# extreme-edge-2_ip = 192.168.1.102
-# extreme-edge-3_ip = 192.168.1.103
-# extreme-edge-4_ip = 192.168.1.104
+extreme-edge-1_ip = 127.0.0.1
+# extreme-edge-2_ip = X.Y.Z.T
+# extreme-edge-3_ip = X.Y.Z.T
+# ...
+# extreme-edge-n_ip = X.Y.Z.T
+
+[far-edge]
+# far-edge-1_ip = X.Y.Z.T
+# far-edge-2_ip = X.Y.Z.T
+# far-edge-3_ip = X.Y.Z.T
+# ...
+# far-edge-n_ip = X.Y.Z.T
 
 [near-edge]
-# near-edge-1_ip = 192.168.123.38
-# near-edge-2_ip = 192.168.1.202
-# near-edge-3_ip = 192.168.1.203
-# near-edge-4_ip = 192.168.1.204
+# near-edge-1_ip = X.Y.Z.T
+# near-edge-2_ip = X.Y.Z.T
+# near-edge-3_ip = X.Y.Z.T
+# ...
+# near-edge-n_ip = X.Y.Z.T
+
+[cloud]
+# cloud-1_ip = X.Y.Z.T
+# cloud-2_ip = X.Y.Z.T
+# cloud-3_ip = X.Y.Z.T
+# ...
+# cloud-n_ip = X.Y.Z.T
